[gd_scene load_steps=8 format=3 uid="uid://4ba0yyxyuu7w"]

[ext_resource type="Script" path="res://Game/Character/Menu/Menu.gd" id="1_fql8h"]
[ext_resource type="Theme" uid="uid://bwut7jiiwhfkj" path="res://Theme.tres" id="1_xe4q3"]
[ext_resource type="Texture2D" uid="uid://dwudmbmsx8psp" path="res://Icon/Icon.png" id="3_f3p0b"]
[ext_resource type="PackedScene" uid="uid://bocms5x4cn4ny" path="res://Game/Character/Menu/Button.tscn" id="3_ktgbf"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_pe2fk"]
bg_color = Color(0.25, 0.25, 0.25, 0.75)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_vps01"]
bg_color = Color(0.5, 0.5, 0.5, 0.75)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_xdore"]
bg_color = Color(0, 0, 0, 0)

[node name="Menu" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_xe4q3")
script = ExtResource("1_fql8h")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.35)

[node name="Button" type="Control" parent="."]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
grow_vertical = 0

[node name="Into" type="Button" parent="Button"]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 55.0
offset_top = -277.0
offset_right = 245.0
offset_bottom = -237.0
grow_vertical = 0
theme = ExtResource("1_xe4q3")
text = "开始游戏"

[node name="1" type="ColorRect" parent="Button/Into"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.005
anchor_right = 0.005
offset_left = -5.95
offset_top = -5.0
offset_right = 194.05
color = Color(0.75, 0.75, 0.75, 0.75)

[node name="2" type="ColorRect" parent="Button/Into"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.005
anchor_right = 0.005
offset_left = -5.95
offset_right = -0.95
offset_bottom = 40.0
color = Color(0.75, 0.75, 0.75, 0.75)

[node name="3" type="ColorRect" parent="Button/Into"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.005
anchor_right = 0.005
offset_left = 189.05
offset_right = 194.05
offset_bottom = 40.0
color = Color(0.75, 0.75, 0.75, 0.75)

[node name="4" type="ColorRect" parent="Button/Into"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.005
anchor_right = 0.005
offset_left = -5.95
offset_top = 40.0
offset_right = 194.05
offset_bottom = 45.0
color = Color(0.75, 0.75, 0.75, 0.75)

[node name="GoBack" type="Button" parent="Button"]
layout_mode = 1
anchors_preset = -1
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 55.0
offset_top = -322.0
offset_right = 245.0
offset_bottom = -282.0
grow_vertical = 0
theme = ExtResource("1_xe4q3")
text = "继续游戏"

[node name="2" type="ColorRect" parent="Button/GoBack"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.005
anchor_right = 0.005
offset_left = -5.95
offset_right = -0.95
offset_bottom = 40.0
color = Color(0.74902, 0.74902, 0.74902, 0.74902)

[node name="3" type="ColorRect" parent="Button/GoBack"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.005
anchor_right = 0.005
offset_left = 189.05
offset_right = 194.05
offset_bottom = 40.0
color = Color(0.75, 0.75, 0.75, 0.75)

[node name="4" type="ColorRect" parent="Button/GoBack"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.005
anchor_right = 0.005
offset_left = -5.95
offset_top = -5.0
offset_right = 194.05
color = Color(0.75, 0.75, 0.75, 0.75)

[node name="5" type="ColorRect" parent="Button/GoBack"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.005
anchor_right = 0.005
offset_left = -5.95
offset_top = 40.0
offset_right = 194.05
offset_bottom = 45.0
color = Color(0.75, 0.75, 0.75, 0.75)

[node name="Restart" type="Button" parent="Button"]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 55.0
offset_top = -277.0
offset_right = 245.0
offset_bottom = -237.0
grow_vertical = 0
theme = ExtResource("1_xe4q3")
text = "重新开始"

[node name="2" type="ColorRect" parent="Button/Restart"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.005
anchor_right = 0.005
offset_left = -5.95
offset_right = -0.95
offset_bottom = 40.0
color = Color(0.75, 0.75, 0.75, 0.75)

[node name="3" type="ColorRect" parent="Button/Restart"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.005
anchor_right = 0.005
offset_left = 189.05
offset_right = 194.05
offset_bottom = 40.0
color = Color(0.75, 0.75, 0.75, 0.75)

[node name="5" type="ColorRect" parent="Button/Restart"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.005
anchor_right = 0.005
offset_left = -5.95
offset_top = 40.0
offset_right = 194.05
offset_bottom = 45.0
color = Color(0.75, 0.75, 0.75, 0.75)

[node name="Adjust" type="Button" parent="Button"]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 55.0
offset_top = -187.0
offset_right = 245.0
offset_bottom = -147.0
grow_vertical = 0
theme = ExtResource("1_xe4q3")
text = "游戏设置"

[node name="1" type="ColorRect" parent="Button/Adjust"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.005
anchor_right = 0.005
offset_left = -5.95
offset_top = 40.0
offset_right = 194.05
offset_bottom = 45.0
color = Color(0.75, 0.75, 0.75, 0.75)

[node name="2" type="ColorRect" parent="Button/Adjust"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.005
anchor_right = 0.005
offset_left = -5.95
offset_right = -0.95
offset_bottom = 40.0
color = Color(0.75, 0.75, 0.75, 0.75)

[node name="3" type="ColorRect" parent="Button/Adjust"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.005
anchor_right = 0.005
offset_left = 189.05
offset_right = 194.05
offset_bottom = 40.0
color = Color(0.75, 0.75, 0.75, 0.75)

[node name="HeadLine" type="Button" parent="Button"]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 55.0
offset_top = -142.0
offset_right = 245.0
offset_bottom = -102.0
grow_vertical = 0
theme = ExtResource("1_xe4q3")
text = "退出游戏"

[node name="1" type="ColorRect" parent="Button/HeadLine"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.005
anchor_right = 0.005
offset_left = -5.95
offset_top = 40.0
offset_right = 194.05
offset_bottom = 45.0
color = Color(0.75, 0.75, 0.75, 0.75)

[node name="2" type="ColorRect" parent="Button/HeadLine"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.005
anchor_right = 0.005
offset_left = -5.95
offset_right = -0.95
offset_bottom = 40.0
color = Color(0.75, 0.75, 0.75, 0.75)

[node name="3" type="ColorRect" parent="Button/HeadLine"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.005
anchor_right = 0.005
offset_left = 189.05
offset_right = 194.05
offset_bottom = 40.0
color = Color(0.75, 0.75, 0.75, 0.75)

[node name="Chapter" type="Button" parent="Button"]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 55.0
offset_top = -232.0
offset_right = 245.0
offset_bottom = -192.0
grow_vertical = 0
theme = ExtResource("1_xe4q3")
text = "章节选择"

[node name="1" type="ColorRect" parent="Button/Chapter"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.005
anchor_right = 0.005
offset_left = -5.95
offset_top = 40.0
offset_right = 194.05
offset_bottom = 45.0
color = Color(0.75, 0.75, 0.75, 0.75)

[node name="2" type="ColorRect" parent="Button/Chapter"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.005
anchor_right = 0.005
offset_left = -5.95
offset_right = -0.95
offset_bottom = 40.0
color = Color(0.75, 0.75, 0.75, 0.75)

[node name="3" type="ColorRect" parent="Button/Chapter"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.005
anchor_right = 0.005
offset_left = 189.05
offset_right = 194.05
offset_bottom = 40.0
color = Color(0.75, 0.75, 0.75, 0.75)

[node name="Gravity" type="TextureRect" parent="Button"]
layout_mode = 0
offset_left = 55.0
offset_top = -427.0
offset_right = 120.0
offset_bottom = -362.0
texture = ExtResource("3_f3p0b")
expand_mode = 1
metadata/_edit_group_ = true

[node name="1" type="ColorRect" parent="Button/Gravity"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.005
anchor_right = 0.005
offset_left = -5.35
offset_top = -5.0
offset_right = 194.65
color = Color(0.75, 0.75, 0.75, 0.75)

[node name="2" type="ColorRect" parent="Button/Gravity"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.005
anchor_right = 0.005
offset_left = -5.325
offset_right = -0.325
offset_bottom = 65.0
color = Color(0.75, 0.75, 0.75, 0.75)

[node name="3" type="ColorRect" parent="Button/Gravity"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.005
anchor_right = 0.005
offset_left = 189.675
offset_right = 194.675
offset_bottom = 65.0
color = Color(0.75, 0.75, 0.75, 0.75)

[node name="4" type="ColorRect" parent="Button/Gravity"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.005
anchor_right = 0.005
offset_left = -5.325
offset_top = 65.0
offset_right = 194.675
offset_bottom = 70.0
color = Color(0.75, 0.75, 0.75, 0.75)

[node name="5" type="ColorRect" parent="Button/Gravity"]
show_behind_parent = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.25098, 0.25098, 0.25098, 0.74902)

[node name="Label" type="Label" parent="Button/Gravity"]
layout_mode = 0
offset_left = 70.0
offset_right = 190.0
offset_bottom = 65.0
text = "  Gravity
  Accident"
vertical_alignment = 1

[node name="6" type="ColorRect" parent="Button/Gravity"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.005
anchor_right = 0.005
offset_left = 64.675
offset_right = 69.675
offset_bottom = 65.0
color = Color(0.75, 0.75, 0.75, 0.75)

[node name="7" type="ColorRect" parent="Button/Gravity"]
show_behind_parent = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 70.0
offset_right = 125.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.25098, 0.25098, 0.25098, 0.74902)

[node name="Adjust" type="Control" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -225.0
offset_top = -150.0
offset_right = 226.0
offset_bottom = 107.0
grow_horizontal = 2
grow_vertical = 2
metadata/_edit_group_ = true

[node name="Frame" type="Control" parent="Adjust"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="1" type="ColorRect" parent="Adjust/Frame"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 5.0
grow_horizontal = 2
color = Color(0.74902, 0.74902, 0.74902, 0.74902)

[node name="2" type="ColorRect" parent="Adjust/Frame"]
layout_mode = 1
anchors_preset = -1
anchor_top = 0.833
anchor_right = 0.999
anchor_bottom = 0.833
offset_top = 38.267
offset_right = 0.450989
offset_bottom = 43.267
grow_horizontal = 2
grow_vertical = 0
color = Color(0.74902, 0.74902, 0.74902, 0.74902)

[node name="3" type="ColorRect" parent="Adjust/Frame"]
layout_mode = 1
anchors_preset = -1
anchor_bottom = 0.98
offset_top = 5.0
offset_right = 5.0
offset_bottom = 0.139999
grow_vertical = 2
color = Color(0.74902, 0.74902, 0.74902, 0.74902)

[node name="4" type="ColorRect" parent="Adjust/Frame"]
layout_mode = 1
anchors_preset = -1
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 0.834
offset_left = -5.0
offset_top = 5.0
offset_bottom = 37.662
grow_horizontal = 0
grow_vertical = 2
color = Color(0.74902, 0.74902, 0.74902, 0.74902)

[node name="HeadLine" type="Button" parent="Adjust"]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.1
anchor_bottom = 0.001
offset_left = 5.0
offset_top = 5.0
offset_right = -50.1
offset_bottom = 24.699
grow_horizontal = 2
theme = ExtResource("1_xe4q3")
theme_override_styles/normal = SubResource("StyleBoxFlat_pe2fk")
theme_override_styles/hover = SubResource("StyleBoxFlat_pe2fk")
theme_override_styles/pressed = SubResource("StyleBoxFlat_vps01")
theme_override_styles/disabled = SubResource("StyleBoxFlat_pe2fk")
theme_override_styles/focus = SubResource("StyleBoxFlat_xdore")
text = "设置"

[node name="1" type="ColorRect" parent="Adjust/HeadLine"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_top = 20.0
offset_bottom = 25.0
grow_horizontal = 2
color = Color(0.74902, 0.74902, 0.74902, 0.74902)

[node name="Image" type="Control" parent="Adjust"]
anchors_preset = 0
offset_top = -46.0
offset_bottom = -46.0

[node name="2" type="ColorRect" parent="Adjust/Image"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_left = 145.0
offset_top = 76.0
offset_right = 150.0
offset_bottom = 116.0
grow_horizontal = 2
color = Color(0.74902, 0.74902, 0.74902, 0.74902)

[node name="3" type="ColorRect" parent="Adjust/Image"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_left = 295.0
offset_top = 76.0
offset_right = 300.0
offset_bottom = 116.0
grow_horizontal = 2
color = Color(0.74902, 0.74902, 0.74902, 0.74902)

[node name="Resolution" type="OptionButton" parent="Adjust/Image"]
layout_mode = 0
offset_left = 5.0
offset_top = 76.0
offset_right = 145.0
offset_bottom = 116.0
toggle_mode = false
shortcut_in_tooltip = false
alignment = 1
item_count = 2
selected = 1
popup/item_0/text = "全屏"
popup/item_0/id = 3
popup/item_1/text = "窗口化"
popup/item_1/id = 0

[node name="Shadow" type="OptionButton" parent="Adjust/Image"]
layout_mode = 0
offset_left = 150.0
offset_top = 76.0
offset_right = 295.0
offset_bottom = 116.0
toggle_mode = false
shortcut_in_tooltip = false
alignment = 1
item_count = 2
selected = 0
popup/item_0/text = "阴影 开"
popup/item_0/id = 0
popup/item_1/text = "阴影 关"
popup/item_1/id = 1

[node name="Antialias" type="OptionButton" parent="Adjust/Image"]
layout_mode = 0
offset_left = 300.0
offset_top = 76.0
offset_right = 446.0
offset_bottom = 116.0
toggle_mode = false
shortcut_in_tooltip = false
alignment = 1
item_count = 4
selected = 0
popup/item_0/text = "Msaa 禁用"
popup/item_0/id = 0
popup/item_1/text = "Msaa  2x"
popup/item_1/id = 1
popup/item_2/text = "锯齿 4x"
popup/item_2/id = 2
popup/item_3/text = "锯齿 8x"
popup/item_3/id = 3

[node name="Audio" type="Control" parent="Adjust"]
anchors_preset = 0
offset_top = 24.0
offset_bottom = 24.0

[node name="1" type="ColorRect" parent="Adjust/Audio"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_left = 5.0
offset_top = 51.0
offset_right = 145.0
offset_bottom = 92.0
grow_horizontal = 2
color = Color(0.25, 0.25, 0.25, 0.75)

[node name="2" type="ColorRect" parent="Adjust/Audio"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_left = 5.0
offset_top = 97.0
offset_right = 145.0
offset_bottom = 137.0
grow_horizontal = 2
color = Color(0.25, 0.25, 0.25, 0.75)

[node name="3" type="ColorRect" parent="Adjust/Audio"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_left = 5.0
offset_top = 142.0
offset_right = 145.0
offset_bottom = 181.0
grow_horizontal = 2
color = Color(0.25, 0.25, 0.25, 0.75)

[node name="4" type="ColorRect" parent="Adjust/Audio"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_left = 150.0
offset_top = 51.0
offset_right = 446.0
offset_bottom = 92.0
grow_horizontal = 2
color = Color(0.25, 0.25, 0.25, 0.75)

[node name="5" type="ColorRect" parent="Adjust/Audio"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_left = 150.0
offset_top = 97.0
offset_right = 446.0
offset_bottom = 137.0
grow_horizontal = 2
color = Color(0.25, 0.25, 0.25, 0.75)

[node name="6" type="ColorRect" parent="Adjust/Audio"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_left = 150.0
offset_top = 142.0
offset_right = 446.0
offset_bottom = 181.0
grow_horizontal = 2
color = Color(0.25098, 0.25098, 0.25098, 0.74902)

[node name="7" type="ColorRect" parent="Adjust/Audio"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_left = 5.0
offset_top = 186.0
offset_right = 145.0
offset_bottom = 228.0
grow_horizontal = 2
color = Color(0.25, 0.25, 0.25, 0.75)

[node name="8" type="ColorRect" parent="Adjust/Audio"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_left = 150.0
offset_top = 186.0
offset_right = 446.0
offset_bottom = 228.0
grow_horizontal = 2
color = Color(0.25, 0.25, 0.25, 0.75)

[node name="Main" type="Label" parent="Adjust/Audio"]
layout_mode = 1
anchors_preset = -1
anchor_left = -0.503
anchor_top = -0.111
anchor_right = -0.503
anchor_bottom = -0.111
offset_left = 5.0
offset_top = 51.0
offset_right = 145.0
offset_bottom = 92.0
text = "主音频"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Main" type="HSlider" parent="Adjust/Audio/Main"]
layout_mode = 0
offset_left = 155.0
offset_right = 430.0
offset_bottom = 41.0
max_value = 1.0
step = 0.01
value = 1.0

[node name="1" type="ColorRect" parent="Adjust/Audio/Main"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_top = 41.0
offset_right = 301.0
offset_bottom = 46.0
grow_horizontal = 2
color = Color(0.74902, 0.74902, 0.74902, 0.74902)

[node name="2" type="ColorRect" parent="Adjust/Audio/Main"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_left = 140.0
offset_right = 5.0
offset_bottom = 41.0
grow_horizontal = 2
color = Color(0.74902, 0.74902, 0.74902, 0.74902)

[node name="Scene" type="Label" parent="Adjust/Audio"]
layout_mode = 1
anchors_preset = -1
anchor_left = -0.503
anchor_top = -0.111
anchor_right = -0.503
anchor_bottom = -0.111
offset_left = 5.0
offset_top = 97.0
offset_right = 145.0
offset_bottom = 137.0
text = "环境"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Scene" type="HSlider" parent="Adjust/Audio/Scene"]
layout_mode = 0
offset_left = 155.0
offset_right = 430.0
offset_bottom = 40.0
max_value = 1.0
step = 0.01
value = 1.0

[node name="1" type="ColorRect" parent="Adjust/Audio/Scene"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_top = 40.0
offset_right = 301.0
offset_bottom = 45.0
grow_horizontal = 2
color = Color(0.74902, 0.74902, 0.74902, 0.74902)

[node name="2" type="ColorRect" parent="Adjust/Audio/Scene"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_left = 140.0
offset_right = 5.0
offset_bottom = 40.0
grow_horizontal = 2
color = Color(0.74902, 0.74902, 0.74902, 0.74902)

[node name="Music" type="Label" parent="Adjust/Audio"]
layout_mode = 1
anchors_preset = -1
anchor_left = -0.503
anchor_top = -0.111
anchor_right = -0.503
anchor_bottom = -0.111
offset_left = 5.0
offset_top = 142.0
offset_right = 145.0
offset_bottom = 181.0
text = "音乐"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Music" type="HSlider" parent="Adjust/Audio/Music"]
layout_mode = 0
offset_left = 155.0
offset_right = 430.0
offset_bottom = 41.0
max_value = 1.0
step = 0.01
value = 1.0

[node name="1" type="ColorRect" parent="Adjust/Audio/Music"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_top = -96.0
offset_right = 301.0
offset_bottom = -91.0
grow_horizontal = 2
color = Color(0.74902, 0.74902, 0.74902, 0.74902)

[node name="2" type="ColorRect" parent="Adjust/Audio/Music"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_left = 140.0
offset_right = 5.0
offset_bottom = 39.0
grow_horizontal = 2
color = Color(0.74902, 0.74902, 0.74902, 0.74902)

[node name="Dialogue" type="Label" parent="Adjust/Audio"]
layout_mode = 1
anchors_preset = -1
anchor_left = -0.503
anchor_top = -0.111
anchor_right = -0.503
anchor_bottom = -0.111
offset_left = 5.0
offset_top = 186.0
offset_right = 145.0
offset_bottom = 228.0
text = "对话"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Dialogue" type="HSlider" parent="Adjust/Audio/Dialogue"]
layout_mode = 0
offset_left = 155.0
offset_right = 430.0
offset_bottom = 42.0
max_value = 1.0
step = 0.01
value = 1.0
editable = false

[node name="1" type="ColorRect" parent="Adjust/Audio/Dialogue"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_top = -5.0
offset_right = 301.0
grow_horizontal = 2
color = Color(0.74902, 0.74902, 0.74902, 0.74902)

[node name="2" type="ColorRect" parent="Adjust/Audio/Dialogue"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_left = 140.0
offset_right = 5.0
offset_bottom = 42.0
grow_horizontal = 2
color = Color(0.74902, 0.74902, 0.74902, 0.74902)

[node name="Chapter" type="Control" parent="."]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -225.0
offset_top = -150.0
offset_right = 226.0
offset_bottom = 107.0
grow_horizontal = 2
grow_vertical = 2
metadata/_edit_group_ = true

[node name="Frame" type="Control" parent="Chapter"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="1" type="ColorRect" parent="Chapter/Frame"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 5.0
grow_horizontal = 2
color = Color(0.74902, 0.74902, 0.74902, 0.74902)

[node name="2" type="ColorRect" parent="Chapter/Frame"]
layout_mode = 1
anchors_preset = -1
anchor_top = 0.833
anchor_right = 0.999
anchor_bottom = 0.833
offset_top = 38.267
offset_right = 0.450989
offset_bottom = 43.267
grow_horizontal = 2
grow_vertical = 0
color = Color(0.74902, 0.74902, 0.74902, 0.74902)

[node name="3" type="ColorRect" parent="Chapter/Frame"]
layout_mode = 1
anchors_preset = -1
anchor_bottom = 0.98
offset_top = 5.0
offset_right = 5.0
offset_bottom = 0.139999
grow_vertical = 2
color = Color(0.74902, 0.74902, 0.74902, 0.74902)

[node name="4" type="ColorRect" parent="Chapter/Frame"]
layout_mode = 1
anchors_preset = -1
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 0.834
offset_left = -5.0
offset_top = 5.0
offset_bottom = 37.662
grow_horizontal = 0
grow_vertical = 2
color = Color(0.74902, 0.74902, 0.74902, 0.74902)

[node name="5" type="ColorRect" parent="Chapter/Frame"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_left = 5.0
offset_top = 30.0
offset_right = -5.0
offset_bottom = 252.0
grow_horizontal = 2
color = Color(0.25098, 0.25098, 0.25098, 0.74902)

[node name="HeadLine" type="Button" parent="Chapter"]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.1
anchor_bottom = 0.001
offset_left = 5.0
offset_top = 5.0
offset_right = -50.1
offset_bottom = 24.699
grow_horizontal = 2
theme = ExtResource("1_xe4q3")
theme_override_styles/normal = SubResource("StyleBoxFlat_pe2fk")
theme_override_styles/hover = SubResource("StyleBoxFlat_pe2fk")
theme_override_styles/pressed = SubResource("StyleBoxFlat_vps01")
theme_override_styles/disabled = SubResource("StyleBoxFlat_pe2fk")
theme_override_styles/focus = SubResource("StyleBoxFlat_xdore")
text = "章节"

[node name="1" type="ColorRect" parent="Chapter/HeadLine"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_top = 20.0
offset_bottom = 25.0
grow_horizontal = 2
color = Color(0.74902, 0.74902, 0.74902, 0.74902)

[node name="List" type="ScrollContainer" parent="Chapter"]
layout_mode = 0
offset_left = 10.0
offset_top = 36.0
offset_right = 441.0
offset_bottom = 247.0
horizontal_scroll_mode = 0

[node name="List" type="VBoxContainer" parent="Chapter/List"]
layout_mode = 2
size_flags_horizontal = 3

[node name="1" parent="Chapter/List/List" instance=ExtResource("3_ktgbf")]
layout_mode = 2
disabled = true
text = " 1.重力"

[node name="2" parent="Chapter/List/List" instance=ExtResource("3_ktgbf")]
layout_mode = 2
disabled = true
text = " 2.移动"

[node name="3" parent="Chapter/List/List" instance=ExtResource("3_ktgbf")]
layout_mode = 2
disabled = true
text = " 3.弹射"

[node name="4" parent="Chapter/List/List" instance=ExtResource("3_ktgbf")]
layout_mode = 2
disabled = true
text = " 4.反转"

[node name="5" parent="Chapter/List/List" instance=ExtResource("3_ktgbf")]
visible = false
layout_mode = 2
disabled = true
text = " 5.进阶"

[connection signal="pressed" from="Button/Into" to="." method="_on_into_pressed"]
[connection signal="pressed" from="Button/GoBack" to="." method="_on_go_back_pressed"]
[connection signal="pressed" from="Button/Restart" to="." method="_on_restart_pressed"]
[connection signal="pressed" from="Button/Adjust" to="." method="_on_adjust_pressed"]
[connection signal="pressed" from="Button/HeadLine" to="." method="_on_bow_out_pressed"]
[connection signal="pressed" from="Button/Chapter" to="." method="_on_chapter_pressed"]
[connection signal="item_selected" from="Adjust/Image/Resolution" to="." method="_on_resolution_item_selected"]
[connection signal="item_selected" from="Adjust/Image/Shadow" to="." method="_on_shadow_item_selected"]
[connection signal="item_selected" from="Adjust/Image/Antialias" to="." method="_on_antialias_item_selected"]
[connection signal="value_changed" from="Adjust/Audio/Main/Main" to="." method="_on_main_value_changed"]
[connection signal="value_changed" from="Adjust/Audio/Scene/Scene" to="." method="_on_scene_value_changed"]
[connection signal="value_changed" from="Adjust/Audio/Music/Music" to="." method="_on_music_value_changed"]
[connection signal="value_changed" from="Adjust/Audio/Dialogue/Dialogue" to="." method="_on_dialogue_value_changed"]
